src/test/ui/regions/regions-close-object-into-object-3.nll.stderr
error[E0515]: cannot return value referencing local data `*v`
  --> $DIR/regions-close-object-into-object-3.rs:11:5
   |
LL |     box B(&*v) as Box<X>
   |     ^^^^^^---^^^^^^^^^^^
   |     |     |
   |     |     `*v` is borrowed here
   |     returns a value referencing data owned by the current function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0515`.
